--- a/package.json
+++ b/package.json
@@ -21,36 +21,23 @@
   },
   "homepage": "https://github.com/Proto-Garage/onewallet.eventstore#readme",
   "devDependencies": {
-    "@types/amqplib": "^0.5.8",
     "@types/bluebird": "^3.5.24",
     "@types/chai": "^4.1.6",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/lodash.sample": "^4.2.4",
     "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.3.1",
     "@types/ramda": "^0.25.41",
-    "@types/sequelize": "^4.27.25",
-    "@types/sinon": "^5.0.2",
-    "@types/unique-random": "0.0.28",
-    "@types/uuid": "^3.4.4",
     "bluebird": "^3.5.3",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
-    "sinon": "^6.3.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3",
-    "unique-random": "^2.0.0"
+    "typescript": "^3.0.3"
   },
   "dependencies": {
     "async-exit-hook": "^2.0.1",
     "clean-deep": "^3.0.2",
-    "graphql-iso-date": "^3.6.1",
     "highoutput-utilities": "0.0.7",
-    "lodash.sample": "^4.2.1",
-    "luxon": "^1.10.0",
     "mongoose": "^5.3.10",
     "onewallet.library.error": "git+https://git@github.com/Proto-Garage/onewallet.library.error.git#0.0.2",
     "onewallet.library.rabbit": "git+https://git@github.com/Proto-Garage/onewallet.library.rabbit.git#v0.4.11",
